# oidconv

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: COCO.md  OID.md  YOLO.md
src/oidconv/: coco.py  coco_annotation.py  coco_category.py  coco_image.py  oid.py  oid_bbox.py  oid_class.py  oid_config.py  oid_config_obj.py  oid_constants.py  oid_conv.py  oid_image.py  oid_obj.py  oidconv.py  oidconv_config.py  oidconv_configobj.py
src/oidconv/coco_files/: licenses.json
tests/: conftest.py  test_coco.py  test_coco_annotation.py  test_coco_image.py  test_oid.py  test_oid_bbox.py  test_oid_class.py  test_oid_config.py  test_oid_config_obj.py  test_oid_image.py  test_oid_obj.py  test_oidconv.py  test_oidconv_config.py  test_oidconv_configobj.py  test_oidconv_project.py
tests/config/: test_oid.json  test_oidconv.json  test_oidconv_error.json
tests/test_coco_files/: info.json
